<resources>
    <string name="app_name">SportsTracker</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Login</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Password again</string>
    <string name="prompt_weight">Weight [kg]</string>
    <string name="prompt_height">Height [cm]</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_register_and_sign_in">Create account and sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This login is not valid</string>
    <string name="error_login_exists">This login already exists</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="MainAtcitivity_btnDelete">Delete</string>
    <string name="MainAtcitivity_btnDetail">Detail</string>
    <string name="btnStartActivity">Start</string>
    <string name="btnStopActivity">Stop</string>
    <string name="txtTime">Time</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_detail">Map</string>
    <string name="markerStart">Start</string>
    <string name="markerEnd">End</string>
    <string name="txtDistanceLabel">Distance</string>
    <string name="txtPaceLabel">Pace</string>
    <string name="txtDateLabel">Date</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Sign in</string>
    <string name="prompt_date">Birthday(dd-MM-yyyy)</string>
    <string name="genderMale">Male</string>
    <string name="genderFemale">Female</string>
    <string name="prompt_gender">Gender</string>
    <string name="error_passwords_do_not_match">Passwords do not match</string>
    <string name="btnSaveActivity">Save</string>
    <string name="itemName">Activity</string>
</resources>
